--- a/papers/Plan/LaTeX1.tex
+++ b/papers/Plan/LaTeX1.tex
@@ -23,7 +23,7 @@ On the technique side the project can show how the devices can communicate each 
 \subsection{Meeting room management: }
  With voice sensor are placed in a meeting room, system can detect if this meeting room is busy. Integrating with meeting room booking data in DERI, the system can learn that if the room has been booked. The system will notify people in this room through their personal devices when their booking time is nearly over or this meeting room has been booked in next 5 minutes.
 \subsection{Integrate with personal devices: }
-People can be identified by their personal devices such as mobile phone, laptop.  System can detect the last person who leaves the room and ask him to turn off the lamp or the heater if they are still on.
+People can be identified by their personal devices such as mobile phone, laptop.  System can detect the last person who leaves the room by tracking their devices and ask him to turn off the lamp or the heater if they are still on.
 \subsection{Information}
 Smart poster: when users stay near the poster. The phone will show the profile of the auto. (Near by sensor). We can also deploy this system for the computer history museum.
 \subsection{The factors of improving the scenarios}
@@ -89,13 +89,13 @@ Prepare for demo in group\\
 
 \subsection{Gateway sensor nodes}
 
-\begin{tabular}{|p{2.5cm}|c|p{2cm}|c|c|c|}
-\hline
-\head{Name} & \head{Controller} & \head{Transceiver} & \head{RAM} & \head{Storage} &\head{Interface}\\
-\hline
-{} &{}&{}&{}&{}&{}\\
-\hline
-\end{tabular}
+%\begin{tabular}{|p{2.5cm}|c|p{2cm}|c|c|c|}
+%\hline
+%\head{Name} & \head{Controller} & \head{Transceiver} & \head{RAM} & \head{Storage} &\head{Interface}\\
+%\hline
+%{} &{}&{}&{}&{}&{}\\
+%\hline
+%\end{tabular}
 
 \subsection{Basic Background Knowledge}
 Networking will be implemented in JAVA base on JAVA JNI and PECES\\
