--- a/papers/Plan/LaTeX1.tex
+++ b/papers/Plan/LaTeX1.tex
@@ -21,54 +21,51 @@ We are trying to build a small smart space in DERI, which helps people easier to
 On the technique side the project can show how the devices can communicate each other, how to build a small sensor network, and how to using sensor network data to do some smart services for office.
 \section{Scenarios}
 \subsection{Meeting room management: }
- With voice sensor are placed in a meeting room, system can detect if this meeting room is busy. Integrating with meeting room booking data in DERI, the system can learn that if the room has been booked. The system will notify people in this room through their personal devices when their booking time is nearly over or this meeting room has been booked in next 5 minutes.
+ With noise sensor are placed in a meeting room, system can detect if this meeting room is busy. Integrating with meeting room booking data in DERI, the system can learn that if the room has been booked. The system will notify people in this room through their personal devices when their booking time is nearly over or this meeting room has been booked in next 5 minutes.
 \subsection{Integrate with personal devices: }
 People can be identified by their personal devices such as mobile phone, laptop.  System can detect the last person who leaves the room by tracking their devices and ask him to turn off the lamp or the heater if they are still on.
-\subsection{Information}
-Smart poster: when users stay near the poster. The phone will show the profile of the auto. (Near by sensor). We can also deploy this system for the computer history museum.
-\subsection{The factors of improving the scenarios}
-\head{From the guess side: }What can this system help  people who are visiting DERI.\\
-\head{From Derian side: }What can this system help the Derians.\\
-\head{Automatic decision room}
+\subsection{Information~\cite{survey:2010}}
+Smart poster: when users stay near the poster. The phone will show the profile of the author. We can also deploy this system for the computer history museum.\\
+
 \section{Working plan}
 \subsection{Week 1}
-\head{System overview, basic knowledge preparation, scenarios discuss}\\
+\head{System overview, basic knowledge preparation, scenarios brainstorming}\\
 - Basic knowledge of smart office and wireless sensor network.\\
 - Basic knowledge of sensor network API.\\   
 - Discuss about the scenarios, and equipment preparation.\\
-\head{Output: } Scenarios, API selected.
+\head{Outcome: } Scenarios, candidate API.
 \subsection{Week 2}
 \head{System architecture design}\\
 Design:\\
-- Sensor wireless network architecture.\\
+- Sensor wireless network deployment architecture.\\
 - Data management architecture.\\ 
 Set up:\\
 - Software development kit.\\
-\head{Output:} A designed architecture of the system.
+\head{Outcome:} A designed architecture of the system.
 \subsection{Week 3 - 4}
 \head{Sensor wireless network data collection implementation}\\
 Set up sensor network.\\
 Data collecting test.\\
-Prepare for a short talk.\\
-\head{Output} First version of wireless sensor network.
+Prepare demonstration and presentation for a talk in USM group .\\
+\head{Outcome: }First version of wireless sensor network.
 \subsection{Week 5 - 6}
-\head{Set up wireless sensor network and Evaluation}\\
+\head{Deployment of wireless sensor network}\\
 Set up wireless sensor network:\\
  - Set up sensor network in DERI building.\\
- - Evaluate data collection.\\
-\head{Output}Completed Wireless Sensor Network.
+ - Data collection evaluating.\\
+\head{Outcome: }Completed Wireless Sensor Network.
 \subsection{Week 7}
 \head{Data integration implementation}\\
 Integrate collected sensing data with other data source.\\
-\head{Out put: } Data management for demo application.
-\subsection{week 8 - 11}
+\head{Outcome: } Data management for demo applications.
+\subsection{Week 8 - 11}
 \head{Build the demonstrating applications}\\
 - Build applications demo for the scenario.\\
-\head{Output: }  Demo application.
+\head{Outcome: }  Demo application.
 \subsection{Week 12}
 \head{Work report}\\
 Prepare for demo in group\\
-\head{Out put: } System report.
+\head{Outcome: } System report.
 
 \section{Help:}
 
@@ -79,11 +76,9 @@ Prepare for demo in group\\
 \hline
 {Sunspot} & {ARM 920T} & {802.15.4} & {512K} & {4MB flash} & {Java } & {Squawk Java ME Virtual Machine} \\
 \hline
-{Mica2} & {Atemega 128L} & {Chipcon 868/916 MHz}& {4k} & {128k Flash} & {***NesC} & {TinyOS, SOS, MantisOS support} \\
+{Mica2} & {Atemega 128L} & {Chipcon 868/916 MHz}& {4k} & {128k Flash} & {NesC} & {TinyOS, SOS, MantisOS support} \\
 \hline
-{Tmote-Sky, Tmote-invent} & {MSP430} & {250 kbit/s 2.4 GHz IEEE 802.15.4 Chipcon Wireless Transceiver} & {10k} & {48k Flash} & {***NesC} & {Contiki, TinyOS, SOS, MantisOS Support}\\
-\hline
-{RFID tags***ask Iza} &{}&{}&{}&{}&{}&{}\\
+{Tmote-Sky, Tmote-invent} & {MSP430} & {802.15.4 Chipcon Wireless Transceiver} & {10k} & {48k Flash} & {NesC} & {Contiki, TinyOS, SOS, MantisOS Support}\\
 \hline
 \end{tabular}
 
@@ -100,122 +95,20 @@ Prepare for demo in group\\
 \subsection{Basic Background Knowledge}
 Networking will be implemented in JAVA base on JAVA JNI and PECES\\
 BASE - A Micro broker-based is required as basic knowledge to implement the work.
-
 \subsection{Available service in DERI}
 - Meeting booking system.\\
 - Room check-in system. (where.deri.ie)
-
-
-
-\section{Implementation plan}
-
 \bibliographystyle{abbrv}
 \bibliography{LaTex1}
 \end{document}
 
-%\section{Set up}
-%\subsection{Sensor node distribution}
-%Senosr nodes : Report current status ...\\
-%Actuator nodes: control nodes () \\
-%Central control unit: Coordinates different subsystems (actuator/sensors)\\
-%Sensor nodes are placed around the room to collect the data. The distribution of the sensor nodes depend on the scheme of the room. \\
-%In one room will place 1-2 base station which are directly connected to the Central Control Unit (Coordinate). This coordinate takes the responsibility to communicate to mobile device to %answer the data query or listen to the request then issue the notifications for users or commands to the actuator nodes\cite{wiki:1}.
-%\subsection{System Design}
-%Some pictures
-
-%\subsection{Looking for parking place}
-% When a Derians drives his car to IDA business Park's gate, the first thing he does is to look for a parking place. When his phone has connected to DERI wifi, a parking map shows with %available slot for him.The application is also able to record his usual spot and remind him if it is available.
-
-%*** Is it feasible to do this with DERI parking slot?\\
-%It could be really fancy if we could have done something like that. I think we could. I will look for the device and report later.\\
-
-%\subsection{Guide the visitor}
-%A visitor is coming into DERI building, he open his cell phone and connect to the DERI network. A mobile application will automatically install to his cell phone and asking what he want to do.If %the visitor wants to meet some one in DERI, the system will notify his host to arrange the place for the meeting then guide him to his meeting.\\
-
-%If the visitor is coming to a meeting is hosted by DERI. The system will show him a list of meeting are or going to take place. He is able to pick the meeting then application will guide him to the %conference room booked for this meeting.\\
- 
-% is it possible to use computing services in DERI? 
-
-%In some airports, when you turn on your phone we could receive a message to notify bla bla bla  with a link to their internet web page.I think we could use the same method to give visitor %the link to download and install app to their phone. 
- 
-%\subsection{Notifications}
-% System will issue different notifications to remind people about the working environment the room if it might affect their health or concentration.
- 
-% ***How to collect data to decide when to notify? it must be complicated process and needs domain expertise?
-%Yes, it's complicated. But let's touch the difficulty we always have chances to turn left when nothing is right !!!!
- 
-%\subsection{Discussions}
-% More scenarios have to be depicted.
-% ***Sensors to more fine-grain contexts, for instance , noise-level $\to$ not in the office, RFID + calendar $\to$ in the meeting room with some one...\\
-%I agree....with the actuator node. We can do something more than that....sometime people left with out turn off light especially in the toilet ...we are here turning off the light for saving %DERI's money (Barney's voice :D)!!!
-% *** Visualizations : how to visualize such context data to the office and mobile apps ( be aware of limited screen size of mobile phone and it might be more convenient to use small dash %board device like digital watch?\\
-%Ha ha ... you really want to get this watch ... i know. Of cause the watches are really needed for the 2nd  scenario. How can the system remind the someone that he has visitor. He could be %not in his desk, not with his phone but his watch always at this hand.
-%*** Deploying and collecting data will cost some effort to know how the devices work, the quality of data, what  you do with them, and how to integrate them to build useful apps. \\
-%Hardware Capabilities :- Energy, Radios, Processor, Sensors.
-%data aggregation, ad-hoc routing, distributed signal processing in the context of wireless sensor networks.
-%\subsection{Investigation, analyse, selection}
 
 
 
 
 
 
-%\subsection{Software Architecture for WSN}
-%- Plan for the networking such as routing protocols, node addressing, etc \\
-%- Built a framework supports for the collecting data from different types of sensor nodes.\\
-%- Testing the networking.
-%- Plan for data storing technologies : RDF scheme, RDF indexing (Are we going to use RDF data for data processing later???)\\ 
-%- Depend on scenario rebuilding to decide what will we do with the data we got.\\
-%put the plan here : what to do? how to do? what to buy if necessary?
 
-%Step 1: Nodes.
-
-%Step 2: Network
-%Step 3: Data Centric
-%\section{Test Field}
-%\subsection{Testing with data collection}
-%\subsection{Testing with system decision}
-%\subsection{Testing with notification and command}
-% Devices capabilities test: Install Software Development Kit of all devices test their capabilities in practise.\\
-% Analysing the testing result to plan some variants for designing the system such as  what type of sensor can be used, how many nodes we need, what %tools are available to implement, etc;\\
-%- Discuss to select: routing protocols, language programming, storing technique could be used.\\
-%- Predict the issues probably occur in the reality.\\
-%\subsection{Physical architecture for WSN}Near Field Communication tagMan architecture\\Lighting, applicant control	\\Entertainment system?\\Communication systems\\Data systems\\
-
-%The aim of this project are trying to make mobile device communicate with each other example android mobile phone with laptop, android phone with wireless sensor network. \\
-
-% Example, people may be able to switch on/off the light by will be able to check if the meeting room is busy, if some one is on his desk e.t.c from their phone or laptop. (Scenario is still dumb, we have to discuss more about this).\\ 
-%In order to implement this system, a Wireless sensor network has to be built to collect the physical environment data which would help for predicting step. Some other actuator nodes will have to be place in order to automatic control some equipments in the building. 
-%Smart environment, "a small world, where all kinds of smart devices are continuously working to make inhabitants' lives more comfortable 
-%%Wireless sensor networks(WSN) are physical components in the designs of intelligent environments such as smart offices, smart building, smart city. Using the information collected by sensors, the software i.g., intelligent agents, can reason about the %environment and trigger actions (actuators)~\cite{smart offices:2010}. Our aim of this work is to build wireless network sensor in DERI building in order to construct a smart systems which help interacting with human beings in adaptive, active and unobtrusive way. \\
-% This WSN include sensors and actuators nodes which need to be robust and self-organized in order to create an ubiquitous/pervasive computing platform.  So we might have to face with some technical challenges: 1) Ad-hoc network discovery; 2) Network Control and Routing; 3) Collaborative signal and information processing; 4) Tasking and querying; 5) Security.
-%  for a smart office and we use DERI building as an object to do the experiments. The WNS consists of physical sensor nodes to collect environmental data, actuator nodes for automatic controlling such as light switching, door locking ... etc.  Each node should %able to communicate with their base station via wireless technologies such as wifi, zigbee..ect. A Central Unit is used as a sensitive data storage, data analyser to predict the status of the room and to  issue command to the actuator nodes. Users are able to %communicate with the system via application built and installed on their mobile devices. In the next sections we discuss about realistic scenario, available technology, system design, and evaluation result.
-
-%*** Be careful with grammar and wording
-%There are tow layers of meanings intelligent building, the physical building intelligence and intelligent building management and operation.\\
-%To provide a better service, managers must be able to utilise both human systems for facility management and computer systems for building and office automation.\\
-%An effective building shell is needed to absorb information technology expansion and allow organisations' growth and change.\\
-%Building and office automation and space management systems are required to facilitate effective internal and external communication, support environmental and individual comfort control and monitor change, access and usage.\\
-%a need for integrated technologies and services that allow the integration of disparate organisations systems, data and personal to focus on the common goal of increased business effectiveness.
-%A system View of intelligent buildings
-%A systems view of intelligent buildings:
-%- A computer and telecommunications system
-%- An alarm/security system
-%- A command and control center
-%- An electric power supply system usually guaranteeing continuous uninterrupted
-%- A utilities systems (water, sevwerage, and drainage)\\
-%General concerns : individual comfort, organizational flexibility, technological adaptability, environmental performance.
-%Situations:\\ 
-%- A guess is looking for a room in DERI in which his meeting with DERI people will take place.\\
-%- A guess is looking for a Derian and want to know if he could meet his host or in which way he can contact with his host.\\
-%Intelligent building system:\\
-%BAS\\
-%HVAC system\\
-%Lighting system\\
-%Vertical transportation system\\
-%File protection system\\
-%Security system\\
-%Communication system\\
 
 
 
