--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -7,3 +7,6 @@ This tutorial explain how to set up the RDF On The Go and how we did the experie
 = Details =
 
 ==Seting up an Android application with RDF OTG==
+This new version of RDF OTG provide a native Android RDF store. All you need is just adding two jar file below:
+- <a href='https://rdfonthego.googlecode.com/files/otg_rdf_core.jar'>RDF OTG native storage</a>Spaql query engine "Jena ARQ" ported for RDF OTG.
+- <a href='https://rdfonthego.googlecode.com/files/otg_arq.jar'>Spaql query engine "Jena ARQ" ported for RDF OTG.</a>
