--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -4,9 +4,7 @@
 
 This tutorial explains how to set up the RDF On The Go for an Android application and how we did the experiences on that.
 
-= Details =
-
-==Setting up an Android application with RDF OTG==
+=Setting up an Android application with RDF OTG=
 This new version of RDF OTG provides native RDF storage and Sparql querying engine for Android platform. Thus, all you will need to add into your Android application are just two jar files below:
 
 - <a href='https://rdfonthego.googlecode.com/files/otg_rdf_core.jar'>otg_rdf_core.jar</a> - The native RDF store for Android platform.
@@ -15,4 +13,9 @@ This new version of RDF OTG provides native RDF storage and Sparql querying engi
 
 * Note: Requires Android 2.3.3 or later version and WRITE_EXTERNAL_STORAGE permisson has to be added in the Android project.
 
-===Setting up for evaluations===
+==Setting up for evaluations==
+
+===Social network generation===
+
+
+
