--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -14,13 +14,22 @@ This new version of RDF OTG provides native RDF storage and Sparql querying engi
 * Note: Requires Android 2.3.3 or later version and WRITE_EXTERNAL_STORAGE permisson has to be added in the Android project.
 
 ==2. Setting up for evaluations==
+
 ===2.1 Social network generation===
  For data simulations, we used <a href='http://sourceforge.net/projects/sibenchmark/'> Social Intelligence Benchmark(SIB) tool</a> which takes the schema style from popular social networks such as Facebook as the baseline for designing an RDF-friendly, scientific benchmark. Specifically, it simulates an RDF backend of a social network site, in which users and their interactions form an social graph of social activities such as writing posts, posting comments, creating/managing groups, etc.
  
- The number of users could be change in the parameter file - params.ini. And we also modified name space, the number of friends, the number of photos, posts, comments in order to simulate different network. Example www.facebook.com for facebook, www.linkedin.com for Linkedin, etc. The triples will be save in text file with form of n-tripe.
+ The number of users could be change in the parameter file - params.ini. And we also modified name space, the number of friends, the number of photos, posts, comments in order to simulate different network. Example www.facebook.com for facebook, www.linkedin.com for Linkedin, etc. The triples will be save in text file with form of n-tripe. The example dataset could be found <a href= 'https://rdfonthego.googlecode.com/files/social%20dataset.rar' here></a>
+
 
 ===2.2 Update throughput evaluation===
-
+{{{ 
+ //Create or open a store name "example"
+ graph	=	new BDBGraph("example");
+ //Retrieve data after converted from any23 api.
+ graph.load("http://api.sindice.com/any23/any23/?format=ntriples&uri="+contactFoaFid, contactFoaFid);
+ //Save the graph
+  graph.sync();
+ }}}
 
 
 ===2.3 Comparing query evaluation===
