--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -32,16 +32,33 @@ After generating the simulated graph, we put the n-triples data files into SD ca
 
 You can install <a href= 'https://play.google.com/store/apps/details?id=org.openintents.filemanager&feature=search_result#?t=W251bGwsMSwxLDEsIm9yZy5vcGVuaW50ZW50cy5maWxlbWFuYWdlciJd'>IO File Manager</a> the check if the files are already copied into the storage.
 
-In RDF OTG, we also plugged  Jena Riot Loader in case of parsing RDF in n-triples format.
-
+In RDF OTG, we also plugged  Jena Riot Loader in case of parsing RDF from n-triples format. In first experiment, for evaluating throughput of inserting data. We created a graph with about 1500 users which contains about one million triples and parse into the store. Then we measure the insertion speed. The codes of experiment are in the scripts below: 
 
 {{{ 
- //Create or open a store name "example"
- graph	=	new BDBGraph("example");
- //Retrieve data after converted from any23 api.
- graph.load("http://api.sindice.com/any23/any23/?format=ntriples&uri="+contactFoaFid, contactFoaFid);
- //Save the graph
-  graph.sync();
+ //TDB JENA
+ String loadP = Environment.getExternalStorageDirectory() + "/Experience/";
+ public static void load2(Graph graph) {
+	FileUtil fileUtil = new FileUtil(fileName + "2");
+	
+	BufferedReader in;
+	ParserTurtle parser = new ParserTurtle();
+	try {
+	    fileUtil.start();
+	    fileUtil.write(graph.size());
+	    for (int i = 41; i < 81; i++) {
+		int k = 1700000 + i;
+		in = new BufferedReader(new FileReader(loadP + "mr0_fb" + Integer.toString(k) + ".nt"));
+		parser.parse(graph, " ", in);
+		fileUtil.write(graph.size());
+		System.out.println(i + " " + graph.size());
+		TDB.sync(graph);
+	    }
+	    fileUtil.close();
+
+	} catch (IOException e) {
+	    e.printStackTrace();
+	}
+    }
  }}}
 
 
