--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -70,10 +70,9 @@ In RDF OTG, we also plugged  Jena Riot Loader in case of parsing RDF from n-trip
 	    fileUtil.write(graph.size());
 	    for (int i = 1; i < 100; i++) {
 		int k = 1700000 + i;
-		in = new BufferedReader(new FileReader(loadP + "mr0_fb" + Integer.toString(k) + ".nt"));
-		parser.parse(graph, " ", in);
-		fileUtil.write(graph.size());
-		TDB.sync(graph);
+		RiotLoader.read(loadP + "mr0_fb" + Integer.toString(k) + ".nt", graph);
+//		fileUtil.write(graph.size());
+		graph.sync();
 	    }
 	    fileUtil.close();
 	} catch (IOException e) {
