--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -48,7 +48,7 @@ In RDF OTG, we also plugged  Jena Riot Loader in case of parsing RDF from n-trip
 	    fileUtil.write(graph.size());
 	    for (int i = 1; i < 100; i++) {
 		int k = 1700000 + i;
-		in = new BufferedReader(new FileReader(loadP + "mr0_fb" + Integer.toString(k) + ".nt"));
+		in = new BufferedReader(new FileReader(loading_path + "mr0_fb" + Integer.toString(k) + ".nt"));
 		parser.parse(graph, " ", in);
 		fileUtil.write(graph.size());
 		TDB.sync(graph);
@@ -61,22 +61,19 @@ In RDF OTG, we also plugged  Jena Riot Loader in case of parsing RDF from n-trip
 }}}
 
 {{{ 
- //TDB JENA
- String loadP = Environment.getExternalStorageDirectory() + "/Experience/";
- String storePath
+ //RDF OTG
+ String load_path = Environment.getExternalStorageDirectory() + "/Experience/";
+ String store_Path = Environment.getExternalStorageDirectory() + "/RDF_OTG/";
  public static void start() {
-        
-        Graph graph = 
-	FileUtil fileUtil = new FileUtil("JenaTDB_1_Ex");
-	BufferedReader in;
-	ParserTurtle parser = new ParserTurtle();
+        Graph graph = new OTGGraph(store_path);
+	FileUtil fileUtil = new FileUtil("RDF_OTG_1_Ex");
 	try {
 	    fileUtil.start();
 	    fileUtil.write(graph.size());
 	    for (int i = 1; i < 100; i++) {
 		int k = 1700000 + i;
 		RiotLoader.read(loadP + "mr0_fb" + Integer.toString(k) + ".nt", graph);
-//		fileUtil.write(graph.size());
+		fileUtil.write(graph.size());
 		graph.sync();
 	    }
 	    fileUtil.close();
