Edited wiki page SocialNetworkEvaluation through web user interface.

--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -84,8 +84,7 @@ In RDF OTG, we also plugged  Jena Riot Loader in case of parsing RDF from n-trip
     }
 }}}
 
-The experiments stopped when the loading finish or the application crash due to out of heap memory.
-
+The experiments stopped when the loading finishes or the application crashes due to out of heap memory.
 
 ===2.3 Comparing query evaluation===
 
