Edited wiki page SocialNetworkEvaluation through web user interface.

--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -87,230 +87,7 @@ In RDF OTG, we also plugged  Jena Riot Loader in case of parsing RDF from n-trip
 The experiments stopped when the loading finishes or the application crashes due to out of heap memory.
 
 ===2.3 Comparing query evaluation===
-For evaluating the query processor. We implemented 
-{{{
-package deri.org.ad_hoc;
+For evaluating the query processor. We implemented Integration Graph for both Jena TDB and RDF OTG. The applications could be found in the download of this project.
 
-import android.os.Environment;
-
-import com.hp.hpl.jena.graph.Graph;
-import com.hp.hpl.jena.graph.Node;
-import com.hp.hpl.jena.graph.Triple;
-import com.hp.hpl.jena.graph.TripleMatch;
-import com.hp.hpl.jena.graph.impl.GraphBase;
-import com.hp.hpl.jena.sparql.vocabulary.FOAF;
-import com.hp.hpl.jena.tdb.TDB;
-import com.hp.hpl.jena.tdb.TDBFactory;
-import com.hp.hpl.jena.tdb.store.DatasetGraphTDB;
-import com.hp.hpl.jena.tdb.store.GraphNamedTDB;
-import com.hp.hpl.jena.util.iterator.ExtendedIterator;
-import com.hp.hpl.jena.vocabulary.OWL;
-import com.hp.hpl.jena.vocabulary.RDF;
-
-public class JenaMasterGraph extends GraphBase {
-    public Graph sourceGraph;
-    public Graph unifiedGraph;
-    public Graph sameAsGraph;
-    public final String globalPath = Environment.getExternalStorageDirectory() + "/Jena/";
-    
-    
-    public JenaMasterGraph(){
-	unifiedGraph = TDBFactory.createNamedGraph("unified", globalPath);
-	sameAsGraph  = TDBFactory.createNamedGraph("sameAs", globalPath);
-    }
-    
-    public JenaMasterGraph(String name) {
-	unifiedGraph = TDBFactory.createNamedGraph("unified", globalPath);
-	sourceGraph  = TDBFactory.createNamedGraph(name, globalPath);
-	sameAsGraph  = TDBFactory.createNamedGraph("sameAs", globalPath);
-    }
-
-    public void add(Triple t) {
-	Node s = t.getSubject();
-	Node p = t.getPredicate();
-	Node o = t.getObject();
-
-	Node masterSubject;
-	Node masterObject;
-	if (p.toString().contains(RDF.type.toString())) {
-	    if (o.toString().contains(FOAF.Person.toString())) {
-		masterSubject = getMasterNode(s);
-		if (masterSubject == null) {
-		    // if no masterNode of this
-		    // create a new masterNOde
-		    masterSubject = Node.createURI(s.getURI() + "/master");
-		    // replace the master in unified Graph
-		    replaceSubject(masterSubject, s);
-		    replaceObject(masterSubject, s);
-		    // input new master Node to sameAs graph
-		    sameAsGraph.add(new Triple(masterSubject, OWL.sameAs.asNode(), s));
-		} else {
-		    replaceSubject(masterSubject, s);
-		    replaceObject(masterSubject, s);
-		}
-	    }
-	}
-
-	if (p.equals(FOAF.mbox.asNode())) {
-	    if (o.getLiteralLexicalForm().equals("mailto:"))
-		return;
-	    IPF_merging(t);
-
-	}
-
-	if ((s.isURI()) || (s.isBlank())) {
-	    masterSubject = getMasterNode(s);
-	    if (masterSubject == null) {
-		masterSubject = s;
-	    }
-	} else {
-	    masterSubject = s;
-	}
-
-	if ((o.isURI()) || (o.isBlank())) {
-	    masterObject = getMasterNode(o);
-	    if (masterObject == null) {
-		masterObject = o;
-	    }
-	} else {
-	    masterObject = o;
-	}
-
-	if (p.equals(OWL.sameAs.asNode())) {
-	    mergeSameAs(masterSubject, masterObject);
-	    replaceSubject(masterSubject, masterObject);
-	    replaceObject(masterSubject, masterObject);
-	}
-
-	Triple masterTriple = new Triple(masterSubject, p, masterObject);
-	unifiedGraph.add(masterTriple);
-	sourceGraph.add(t);
-	
-    }
-
-    public void IPF_merging(Triple t) {
-	ExtendedIterator<Triple> triples = unifiedGraph.find(Node.ANY, t.getPredicate(), t.getObject());
-	if (triples.hasNext()) {
-	    Triple tm = triples.next();
-	    if (tm.getSubject().equals(t.getSubject())) {
-		return;
-	    } else {
-		Node removeSubject = getMasterNode(t.getSubject());
-		if (removeSubject == null) {
-		    replaceSubject(tm.getSubject(), t.getSubject());
-		    replaceObject(tm.getObject(), t.getObject());
-		} else {
-		    replaceSubject(tm.getSubject(), removeSubject);
-		    replaceObject(tm.getSubject(), removeSubject);
-		    mergeSameAs(tm.getSubject(), removeSubject);
-		}
-	    }
-	}
-    }
-
-    private Node getMasterNode(Node node) {
-	ExtendedIterator<Triple> triples = sameAsGraph.find(Node.ANY, Node.ANY, node);
-	if (triples.hasNext()) {
-	    Triple t = triples.next();
-	    return t.getSubject();
-	} else {
-	    return null;
-	}
-    }
-
-    private void mergeSameAs(Node masterNodeKeep, Node masterNodeRemove) {
-	if (masterNodeKeep.equals(masterNodeRemove)) {return;}
-	
-	while (true) {
-	    ExtendedIterator<Triple> triples = sameAsGraph.find(masterNodeRemove, Node.ANY, Node.ANY);
-	    if (triples.hasNext()) {
-		Triple t = triples.next();
-		Triple tkeep = new Triple(masterNodeKeep, t.getPredicate(), t.getObject());
-		sameAsGraph.add(tkeep);
-		sameAsGraph.delete(t);
-	    } else {
-		break;
-	    }
-	}
-    }
-
-    private void replaceSubject(Node keep, Node remove) {
-	if (keep.equals(remove)) return;
-	while (true) {
-	    ExtendedIterator<Triple> triples = unifiedGraph.find(remove, Node.ANY, Node.ANY);
-	    if (triples.hasNext()) {
-		Triple t = triples.next();
-		Triple tkeep = new Triple(keep, t.getPredicate(), t.getObject());
-		unifiedGraph.add(tkeep);
-		unifiedGraph.delete(t);
-		
-	    } else {
-		break;
-	    }
-	}
-    }
-
-    private void replaceObject(Node keep, Node remove) {
-	if (keep.equals(remove)) return;
-	while (true) {
-	    ExtendedIterator<Triple> triples = unifiedGraph.find(Node.ANY, Node.ANY, remove);
-	    if (triples.hasNext()) {
-		Triple t = triples.next();
-		Triple tkeep = new Triple(t.getSubject(), t.getPredicate(), keep);
-		unifiedGraph.add(tkeep);
-		unifiedGraph.delete(t);
-	    } else {
-		break;
-	    }
-	}
-    }
-
-    public void sync() {
-	TDB.sync(unifiedGraph);
-	TDB.sync(sourceGraph);
-	TDB.sync(sameAsGraph);
-    }
-
-    @Override
-    protected ExtendedIterator<Triple> graphBaseFind(TripleMatch m) {
-	Node ms = m.getMatchSubject();
-	Node mp = m.getMatchPredicate();
-	Node mo = m.getMatchObject();
-	
-	if (ms == null) {
-	    ms = Node.ANY; 
-	}else{
-	    Node n = getMasterNode(ms);
-	    if (n !=null){
-		ms = n;
-	    }
-	}
-	
-	if (mp == null) {
-	    mp = Node.ANY; 
-	}
-	
-	if (mo == null) {
-	    mo = Node.ANY; 
-	}else{
-	    Node n = getMasterNode(mo);
-	    if (n !=null){
-		mo = n;
-	    }
-	}
-	
-	Triple mm = new Triple (ms, mp, mo);
-	return unifiedGraph.find(mm);
-    }
-    
-    public void close(){
-	unifiedGraph.close();
-	sameAsGraph.close();
-	sourceGraph.close();
-    }
-}
-
-
-
-}}}
+  
 ===2.4 Scalability evaluation===
